# ShipRenderingEnhancement

./: .gitignore  CMakeLists.txt  DELEGATE_WALKTHROUGH.md  DOCUMENTATION.md  main.cpp
entities/: IPersistable.h  Vessel.h
models/: VesselModel.cpp  VesselModel.h
networking/: ApiEndpoints.cpp  ApiEndpoints.h  ApiTypes.h  BaseApi.h  HttpClient.cpp  HttpClient.h  VesselApi.cpp  VesselApi.h
qml/: Main.qml  MapPage.qml
